--- a/Content/triangular_matrices_2.ipynb
+++ b/Content/triangular_matrices_2.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -102,20 +102,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 97.74   76.983  92.359  88.527]\n",
-      " [ 76.681  10.941   3.158  98.564]\n",
-      " [ 46.761  48.537  47.158  44.024]\n",
-      " [ 83.151  57.731   2.521  90.861]] \n",
+      "[[ 19.712  89.383  57.459  73.792]\n",
+      " [ 91.905   9.162   8.359  71.278]\n",
+      " [ 27.108   5.278  22.732   8.701]\n",
+      " [ 28.94    6.452  25.362  55.512]] \n",
       "\n",
-      "[[ 97.74   76.983  92.359  88.527]\n",
-      " [  0.     10.941   3.158  98.564]\n",
-      " [  0.      0.     47.158  44.024]\n",
-      " [  0.      0.      0.     90.861]] \n",
+      "[[ 19.712  89.383  57.459  73.792]\n",
+      " [  0.      9.162   8.359  71.278]\n",
+      " [  0.      0.     22.732   8.701]\n",
+      " [  0.      0.      0.     55.512]] \n",
       "\n",
-      "[[ 97.74    0.      0.      0.   ]\n",
-      " [ 76.681  10.941   0.      0.   ]\n",
-      " [ 46.761  48.537  47.158   0.   ]\n",
-      " [ 83.151  57.731   2.521  90.861]]\n"
+      "[[ 19.712   0.      0.      0.   ]\n",
+      " [ 91.905   9.162   0.      0.   ]\n",
+      " [ 27.108   5.278  22.732   0.   ]\n",
+      " [ 28.94    6.452  25.362  55.512]]\n"
      ]
     }
    ],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -167,16 +167,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11 0\n",
-      "12 1\n",
-      "22 2\n",
-      "13 3\n",
-      "23 4\n",
-      "33 5\n",
-      "14 6\n",
-      "24 7\n",
-      "34 8\n",
-      "44 9\n"
+      "ij = 11 | k = 0\n",
+      "ij = 12 | k = 1\n",
+      "ij = 22 | k = 2\n",
+      "ij = 13 | k = 3\n",
+      "ij = 23 | k = 4\n",
+      "ij = 33 | k = 5\n",
+      "ij = 14 | k = 6\n",
+      "ij = 24 | k = 7\n",
+      "ij = 34 | k = 8\n",
+      "ij = 44 | k = 9\n"
      ]
     }
    ],
@@ -184,7 +184,90 @@
     "for j in range(1,N+1):\n",
     "    for i in range(1,j+1):\n",
     "        k = i - 1 + j*(j - 1)/2\n",
-    "        print '%d%d %d' % (i, j, k)"
+    "        print 'ij = %d%d | k = %d' % (i, j, k)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The function below transforms the triangular matrix $\\mathbf{U}$ into the vector $\\mathbf{u}_{c}$:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def U2uc(U):\n",
+    "    'Transforms the upper triangular matrix U into \\\n",
+    "a vector uc by using a column scheme'\n",
+    "    assert U.shape[0] == U.shape[1], 'U must be square'\n",
+    "    # indices of the non-null elements\n",
+    "    i, j = np.triu_indices(U.shape[0])\n",
+    "    # reorganize the elements according to the column scheme\n",
+    "    p = np.argsort(j)\n",
+    "    i = i[p]\n",
+    "    j = j[p]\n",
+    "    # create the vector uc\n",
+    "    uc = U[i, j]\n",
+    "    return uc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "uc = U2uc(U)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 19.712  89.383   9.162  57.459   8.359  22.732  73.792  71.278   8.701\n",
+      "  55.512]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print uc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 19.712  89.383  57.459  73.792]\n",
+      " [  0.      9.162   8.359  71.278]\n",
+      " [  0.      0.     22.732   8.701]\n",
+      " [  0.      0.      0.     55.512]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print U"
    ]
   },
   {
@@ -220,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -229,16 +312,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11 0\n",
-      "12 1\n",
-      "13 2\n",
-      "14 3\n",
-      "22 4\n",
-      "23 5\n",
-      "24 6\n",
-      "33 7\n",
-      "34 8\n",
-      "44 9\n"
+      "ij = 11 | k = 0\n",
+      "ij = 12 | k = 1\n",
+      "ij = 13 | k = 2\n",
+      "ij = 14 | k = 3\n",
+      "ij = 22 | k = 4\n",
+      "ij = 23 | k = 5\n",
+      "ij = 24 | k = 6\n",
+      "ij = 33 | k = 7\n",
+      "ij = 34 | k = 8\n",
+      "ij = 44 | k = 9\n"
      ]
     }
    ],
@@ -246,7 +329,86 @@
     "for i in range(1,N+1):\n",
     "    for j in range(i,N+1):\n",
     "        k = j - 1 + (i - 1)*(2*N - i)/2\n",
-    "        print '%d%d %d' % (i, j, k)"
+    "        print 'ij = %d%d | k = %d' % (i, j, k)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The function below transforms the triangular matrix $\\mathbf{U}$ into the vector $\\mathbf{u}_{r}$:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def U2ur(U):\n",
+    "    'Transforms the upper triangular matrix U into \\\n",
+    "a vector ur by using a row scheme'\n",
+    "    assert U.shape[0] == U.shape[1], 'U must be square'\n",
+    "    # indices of the non-null elements\n",
+    "    i, j = np.triu_indices(U.shape[0])\n",
+    "    # create the vector uc\n",
+    "    ur = U[i, j]\n",
+    "    return ur"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ur = U2ur(U)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 19.712  89.383  57.459  73.792   9.162   8.359  71.278  22.732   8.701\n",
+      "  55.512]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ur"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 19.712  89.383  57.459  73.792]\n",
+      " [  0.      9.162   8.359  71.278]\n",
+      " [  0.      0.     22.732   8.701]\n",
+      " [  0.      0.      0.     55.512]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print U"
    ]
   },
   {
@@ -282,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -291,16 +453,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11 0\n",
-      "21 1\n",
-      "31 2\n",
-      "41 3\n",
-      "22 4\n",
-      "32 5\n",
-      "42 6\n",
-      "33 7\n",
-      "43 8\n",
-      "44 9\n"
+      "ij = 11 | k = 0\n",
+      "ij = 21 | k = 1\n",
+      "ij = 31 | k = 2\n",
+      "ij = 41 | k = 3\n",
+      "ij = 22 | k = 4\n",
+      "ij = 32 | k = 5\n",
+      "ij = 42 | k = 6\n",
+      "ij = 33 | k = 7\n",
+      "ij = 43 | k = 8\n",
+      "ij = 44 | k = 9\n"
      ]
     }
    ],
@@ -308,7 +470,90 @@
     "for j in range(1,N+1):\n",
     "    for i in range(j,N+1):\n",
     "        k = i - 1 + (j - 1)*(2*N - j)/2\n",
-    "        print '%d%d %d' % (i, j, k)"
+    "        print 'ij = %d%d | k = %d' % (i, j, k)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The function below transforms the triangular matrix $\\mathbf{L}$ into the vector $\\mathbf{l}_{c}$:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def L2lc(L):\n",
+    "    'Transforms the lower triangular matrix L into \\\n",
+    "a vector lc by using a column scheme'\n",
+    "    assert L.shape[0] == L.shape[1], 'L must be square'\n",
+    "    # indices of the non-null elements\n",
+    "    i, j = np.tril_indices(U.shape[0])\n",
+    "    # reorganize the elements according to the column scheme\n",
+    "    p = np.argsort(j)\n",
+    "    i = i[p]\n",
+    "    j = j[p]\n",
+    "    # create the vector lc\n",
+    "    lc = L[i, j]\n",
+    "    return lc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "lc = L2lc(L)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 19.712  91.905  27.108  28.94    9.162   5.278   6.452  22.732  25.362\n",
+      "  55.512]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print lc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 19.712   0.      0.      0.   ]\n",
+      " [ 91.905   9.162   0.      0.   ]\n",
+      " [ 27.108   5.278  22.732   0.   ]\n",
+      " [ 28.94    6.452  25.362  55.512]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print L"
    ]
   },
   {
@@ -344,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -353,16 +598,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11 0\n",
-      "21 1\n",
-      "22 2\n",
-      "31 3\n",
-      "32 4\n",
-      "33 5\n",
-      "41 6\n",
-      "42 7\n",
-      "43 8\n",
-      "44 9\n"
+      "ij = 11 | k = 0\n",
+      "ij = 21 | k = 1\n",
+      "ij = 22 | k = 2\n",
+      "ij = 31 | k = 3\n",
+      "ij = 32 | k = 4\n",
+      "ij = 33 | k = 5\n",
+      "ij = 41 | k = 6\n",
+      "ij = 42 | k = 7\n",
+      "ij = 43 | k = 8\n",
+      "ij = 44 | k = 9\n"
      ]
     }
    ],
@@ -370,7 +615,132 @@
     "for i in range(1,N+1):\n",
     "    for j in range(1,i+1):\n",
     "        k = j - 1 + i*(i - 1)/2\n",
-    "        print '%d%d %d' % (i, j, k)"
+    "        print 'ij = %d%d | k = %d' % (i, j, k)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The function below transforms the triangular matrix $\\mathbf{L}$ into the vector $\\mathbf{l}_{r}$:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def L2lr(L):\n",
+    "    'Transforms the lower triangular matrix L into \\\n",
+    "a vector lc by using a row scheme'\n",
+    "    assert L.shape[0] == L.shape[1], 'L must be square'\n",
+    "    # indices of the non-null elements\n",
+    "    i, j = np.tril_indices(U.shape[0])\n",
+    "    # create the vector lr\n",
+    "    lr = L[i, j]\n",
+    "    return lr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "lr = L2lr(L)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 19.712  91.905   9.162  27.108   5.278  22.732  28.94    6.452  25.362\n",
+      "  55.512]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print lr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 19.712   0.      0.      0.   ]\n",
+      " [ 91.905   9.162   0.      0.   ]\n",
+      " [ 27.108   5.278  22.732   0.   ]\n",
+      " [ 28.94    6.452  25.362  55.512]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print L"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These storage schemes can be used to modify the algorithms presented in the previous class ([`triangular_matrices_1.ipynb`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/triangular_matrices_1.ipynb)) for computing the products $\\mathbf{y} = \\mathbf{U} \\mathbf{x}$ and $\\mathbf{z} = \\mathbf{L} \\mathbf{x}$. Consider the **Algorithm 3**, for example:\n",
+    "\n",
+    "**Algorithm 3**\n",
+    "\n",
+    "    for i = 1:N\n",
+    "        y[i] = y[i] + dot(U[i,i:],x[i:])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice that **Algorithm 3** accesses the elements of $\\mathbf{U}$, row by row. In this case, it is convenient to store $\\mathbf{U}$ in a vector $\\mathbf{u}_{r}$, according to the second storage scheme presented above. Finally, the **Algorithm 3** can be modified as follows:\n",
+    "\n",
+    "**Algorithm 3 (modified)**\n",
+    "\n",
+    "    for i = 1:N\n",
+    "        k1 = i - 1 + (i - 1)*(2*N - i)/2\n",
+    "        k2 = N - 1 + (i - 1)*(2*N - i)/2\n",
+    "        y[i] = y[i] + dot(ur[k1:k2],x[i:])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. In your `my_functions.py` file, implement the modified versions of algorithms 3, 5, 8, and 10, according to the storage schemes presented here. Each modified algorithm must be implemented in a single function. Each modified algorithm must receive the proper vector (uc, ur, lc, or lr) and a vector x and return the resultant vector y or z.\n",
+    "2. In your `test_my_functions.py` file, create four tests to compare the results produced by the algorithms 3, 5, 8, and 10 (presented in the notebook [`triangular_matrices_1.ipynb`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/triangular_matrices_1.ipynb)) and their modified versions created here, in the item 1."
    ]
   },
   {
