--- a/Content/intro_linear_syst.ipynb
+++ b/Content/intro_linear_syst.ipynb
@@ -119,7 +119,7 @@
    "metadata": {},
    "source": [
     "Therefore, solving a linear system means determining the vector $\\mathbf{x}$ from the values of $\\mathbf{A}$ and $\\mathbf{y}$. The complexity of the algorithm used for solving a linear system depends mainly on the structure of the matrix $\\mathbf{A}$.\n",
-    "The [`numpy.linalg`](http://docs.scipy.org/doc/numpy/reference/routines.linalg.html) provides a lot of linear algebra routines. The cells below show an application of the routine [`numpy.linalg.solve`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html#numpy.linalg.solve) for solving a linear system."
+    "The [`numpy.linalg.solve`](https://numpy.org/doc/stable/reference/generated/numpy.linalg.solve.html) provides a routine to solve linear systems, for example. The cells below show an application of this routine."
    ]
   },
   {
@@ -244,7 +244,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -258,9 +258,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
